[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/attacks/Spike.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/attacks/spike_prediction/spritesheet.png" type="Texture" id=2]
[ext_resource path="res://assets/shaders/outline/Outline.tres" type="Material" id=4]

[sub_resource type="Animation" id=1]
resource_name = "lower"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 7, 8, 9, 10, 11, 12, 13 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerDetection/Hurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.435, 0 ), Vector2( 0.435, 4.142 ), Vector2( 0.435, 7.211 ), Vector2( 0.435, 11.144 ), Vector2( 0.435, 15.458 ), Vector2( 0.435, 500 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "start"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerDetection/Hurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.435, 500 ), Vector2( 0.435, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "static"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 1.57143

[sub_resource type="Animation" id=5]
resource_name = "damager"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0.576471, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0.576471, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0.576471, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0.576471, 1, 1 ), Color( 1, 0.0470588, 0, 1 ), Color( 0, 0.576471, 1, 1 ) ]
}

[node name="Spike" type="Sprite" groups=[
"ForeignEnemyAttack",
]]
modulate = Color( 0, 0.576471, 1, 1 )
material = ExtResource( 4 )
texture = ExtResource( 2 )
hframes = 14
frame = 7
script = ExtResource( 1 )
damage = 5

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "start"
anims/lower = SubResource( 1 )
anims/start = SubResource( 2 )
anims/static = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 16

[node name="Hurtbox" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2( 0.435, 0 )
shape = SubResource( 4 )

[node name="BlinkAnimation" type="AnimationPlayer" parent="."]
anims/damager = SubResource( 5 )
[connection signal="animation_finished" from="Animation" to="." method="_on_Animation_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]
